Fix deployment failure